fix: increase scrollbar width for better visibility

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,7 +67,7 @@
   }
 
   ::-webkit-scrollbar {
-    width: 5px;
+    width: 6px;
   }
   ::-webkit-scrollbar-track {
     @apply bg-background;
